--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,4 @@ body {
   @import 'assets/scss/component/header';
   @import 'assets/scss/component/footer';
   @import 'assets/scss/component/users-list';
+  @import 'assets/scss/component/user-detail';
