--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar class="header" color="primary">
   <mat-toolbar-row>
-    <img class="header-logo">
+    <img data-test="logo" class="header-logo">
 
-    <a mat-button [routerLink]="['home']">Home</a>
-    <a mat-button *ngIf="isLoggedIn()" [routerLink]="['users']">Users</a>
+    <a data-test="home-btn" mat-button [routerLink]="['home']">Home</a>
+    <a data-test="users-btn" mat-button *ngIf="isLoggedIn()" [routerLink]="['users']">Users</a>
 
     <div class="navbar-login-info">
-      <span *ngIf="isLoggedIn()">{{getWelcomeText()}}</span>
-      <button mat-raised-button color="basic" (click)="loginClicked()">
+      <span data-test="welcome-text" *ngIf="isLoggedIn()">{{getWelcomeText()}}</span>
+      <button data-test="login-btn" mat-raised-button color="basic" (click)="loginClicked()">
         {{isLoggedIn() ? 'Logout' : 'Login'}}
       </button>
     </div>
