--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -1,8 +1,20 @@
 
-<div *ngIf="user">
-  <p>{{user.first_name + ' ' + user.last_name}}</p>
-  <img src="{{user.avatar}}" alt="User's photo">
-  <label>Email address:</label>
-  <p>{{user.email}}</p>
+<div class="user-detail-container" *ngIf="user">
+  <div class="detail-row">
+    <label>First Name:</label>
+    <span>{{user.first_name}}</span>
+  </div>
+  <div class="detail-row">
+    <label>Last Name:</label>
+    <span>{{user.last_name}}</span>
+  </div>
+  <div class="detail-row">
+    <label>Email:</label>
+    <span>{{user.email}}</span>
+  </div>
+  <div class="detail-row">
+    <img src="{{user.avatar}}" alt="User's photo">
+  </div>
+
 </div>
 <app-loading [show]="showLoading"></app-loading>
