--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -1,14 +1,15 @@
-<div
-  class="search-results"
+<div class="users-list-scrollable"
   infiniteScroll
   [infiniteScrollDistance]="2"
   [infiniteScrollThrottle]="50"
   (scrolled)="onScroll()"
   [scrollWindow]="false">
   <div class="user-card-container" *ngFor="let user of usersList;">
-    <mat-card class="example-card">
+    <mat-card class="user-card">
       <mat-card-header>
-        <mat-card-title>{{user.first_name + ' ' + user.last_name}}</mat-card-title>
+        <mat-card-title>
+          <a [routerLink]="['/user-details', user.id]">{{user.first_name + ' ' + user.last_name}}</a>
+        </mat-card-title>
         <mat-card-subtitle>User</mat-card-subtitle>
       </mat-card-header>
       <img mat-card-image src="{{user.avatar}}" alt="User's photo">
